--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ git push
 
             <div id="chapelet">
                 <h2>Chapelet</h2>
-                <img src="/blob/main/img/img_chapelet.webp" alt="Explication chapelet">
+                <img src="img/img_chapelet.webp" alt="Explication chapelet">
                 <h3>Le symbole des apôtres ou "Je crois en Dieu" (Credo)</h3>
                 <p class="texte">
                     Je crois en Dieu, le Père tout-puissant, créateur du ciel et de la terre ; 
