--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ git push
 
             <div id="bibleJour">
                 <h2>Bible en 1 an - <span id="numeroJour"></span>/365</h2>
-                <iframe id="videoMatin" width="500" height="315" frameborder="0" allowfullscreen></iframe>
-                <iframe id="videoSoir" width="500" height="315" frameborder="0" allowfullscreen></iframe>
+                <iframe data-testid="embed-iframe" style="border-radius:12px" id="videoMatin" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe data-testid="embed-iframe" style="border-radius:12px" id="videoSoir" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
-
+            
             <div id="evangile">
                 <h2>L'Évangile du jour</h2>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=eKVm8SQsWPuQ-Gdh&amp;list=PLCFbs8_i_-pybC0fxFCDmaiPiyE7Hecc0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
