voir les messes d'aujourd'hui actif

--- a/index.html
+++ b/index.html
@@ -76,15 +76,21 @@ git push
                 </p>
             </div>
         </div>
+            
+        <hr>
+
+        <h2>Messes aujourd'hui</h2>
         
         <div class="EgliseInfo-container">
-            <div data-egliseinfo="horaires"
-                data-search="fr 31 toulouse"
-                data-display="MAPS"
-                data-open-in-egliseinfo="false"></div>
+            <div id="widgetEglise"
+                data-egliseinfo="horaires"
+                data-display="TREE"
+                data-open-in-egliseinfo="false">
+            </div>
 
-            <script type="text/javascript" language="javascript" src="https://messes.info/Widget/Widget.nocache.js"></script>
+            <script type="text/javascript" language="javascript" src="https://messes.info//Widget/Widget.nocache.js"></script>
         </div>
+
 
         <script src="script.js"></script>
     </body>
